--- a/DsCommon/web/WEB-INF/web.xml
+++ b/DsCommon/web/WEB-INF/web.xml
@@ -76,8 +76,8 @@
 	
 	<filter-mapping><filter-name>websso</filter-name><url-pattern>/common/user/*</url-pattern></filter-mapping>
 	<filter-mapping><filter-name>websso</filter-name><url-pattern>/common/userrole/*</url-pattern></filter-mapping>
-	
 	<filter-mapping><filter-name>websso</filter-name><url-pattern>/common/userorg/*</url-pattern></filter-mapping>
+	<filter-mapping><filter-name>websso</filter-name><url-pattern>/common/usertype/*</url-pattern></filter-mapping>
 	
 	<filter-mapping><filter-name>websso</filter-name><url-pattern>/index.jsp</url-pattern></filter-mapping>
 
