--- a/DsCommon/.classpath
+++ b/DsCommon/.classpath
@@ -42,5 +42,5 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
