--- a/search/src/config/config.properties
+++ b/search/src/config/config.properties
@@ -5,3 +5,8 @@ dswork.lucene.search=E:/a/
 dswork.lucene.index=
 dswork.lucene.domain=http://www.gzly.gov.cn/a
 dswork.lucene.refreshtime=86400000
+
+dswork.lucene.cms.seq=.searchseq
+dswork.lucene.cms.type=.searchtype
+dswork.lucene.cms.title=.searchtitle
+dswork.lucene.cms.content=.searchcontent
