--- a/DsWorkJava/.classpath
+++ b/DsWorkJava/.classpath
@@ -3,19 +3,19 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="dswork.test"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="dswork.analyzer"/>
+	<classpathentry excluding="MANIFEST.MF" kind="src" path="dswork.analyzer"/>
 	<classpathentry kind="src" path="dswork.config"/>
-	<classpathentry kind="src" path="dswork.core"/>
+	<classpathentry excluding="MANIFEST.MF" kind="src" path="dswork.core"/>
 	<classpathentry kind="src" path="dswork.cs"/>
-	<classpathentry kind="src" path="dswork.flow"/>
-	<classpathentry kind="src" path="dswork.html"/>
-	<classpathentry kind="src" path="dswork.http"/>
-	<classpathentry kind="src" path="dswork.jdbc"/>
-	<classpathentry kind="src" path="dswork.mvc"/>
-	<classpathentry kind="src" path="dswork.ognl"/>
-	<classpathentry kind="src" path="dswork.spring"/>
-	<classpathentry kind="src" path="dswork.web"/>
-	<classpathentry kind="src" path="dswork.webio"/>
+	<classpathentry excluding="MANIFEST.MF" kind="src" path="dswork.flow"/>
+	<classpathentry excluding="MANIFEST.MF" kind="src" path="dswork.html"/>
+	<classpathentry excluding="MANIFEST.MF" kind="src" path="dswork.http"/>
+	<classpathentry excluding="MANIFEST.MF" kind="src" path="dswork.jdbc"/>
+	<classpathentry excluding="MANIFEST.MF" kind="src" path="dswork.mvc"/>
+	<classpathentry excluding="MANIFEST.MF" kind="src" path="dswork.ognl"/>
+	<classpathentry excluding="MANIFEST.MF" kind="src" path="dswork.spring"/>
+	<classpathentry excluding="MANIFEST.MF" kind="src" path="dswork.web"/>
+	<classpathentry excluding="MANIFEST.MF" kind="src" path="dswork.webio"/>
 	<classpathentry kind="src" path="org.hibernate.dialect"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JAVAEE">
 		<attributes>
