--- a/DsSSO/sso/web/WEB-INF/web.xml
+++ b/DsSSO/sso/web/WEB-INF/web.xml
@@ -2,8 +2,8 @@
 <web-app version="2.5" 
 	xmlns="http://java.sun.com/xml/ns/javaee" 
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	metadata-complete="false">
 	<filter>
 		<filter-name>encodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -17,7 +17,6 @@
 		<param-value>classpath:/config/log4j2.xml</param-value>
 	</context-param>
 	<listener><listener-class>org.apache.logging.log4j.web.Log4jServletContextListener</listener-class></listener>
-
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:/config/applicationContext*.xml</param-value>
@@ -26,42 +25,6 @@
 	<listener><listener-class>org.springframework.web.context.ContextLoaderListener</listener-class></listener>
 
 	<listener><listener-class>dswork.sso.listener.SessionListener</listener-class></listener>
-	
-	<servlet>
-		<servlet-name>springmvc</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>springmvc</servlet-name>
-		<url-pattern>/login</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>springmvc</servlet-name>
-		<url-pattern>/loginAction</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>springmvc</servlet-name>
-		<url-pattern>/logout</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>springmvc</servlet-name>
-		<url-pattern>/password</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>springmvc</servlet-name>
-		<url-pattern>/passwordAction</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>springmvc</servlet-name>
-		<url-pattern>/api/*</url-pattern>
-	</servlet-mapping>
-	
-	<servlet><servlet-name>xxx</servlet-name><servlet-class>dswork.web.MyAuthCodeServlet</servlet-class></servlet>
-	<servlet-mapping>
-		<servlet-name>xxx</servlet-name>
-		<url-pattern>/authcode</url-pattern>
-	</servlet-mapping>
 	
 	<error-page><error-code>400</error-code><location>/50x.jsp</location></error-page>
 	<error-page><error-code>404</error-code><location>/50x.jsp</location></error-page>
