--- a/DsSSO/portal/web/WEB-INF/web.xml
+++ b/DsSSO/portal/web/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 	xmlns="http://java.sun.com/xml/ns/javaee" 
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
-	metadata-complete="false">
+	metadata-complete="true">
     <filter>
     	<filter-name>encodingFilter</filter-name>
     	<filter-class>dswork.CharacterEncodingFilter</filter-class>
@@ -12,35 +12,23 @@
     </filter>
 	<filter-mapping><filter-name>encodingFilter</filter-name><url-pattern>/*</url-pattern></filter-mapping>
 	
-	<context-param>
-		<param-name>log4jConfiguration</param-name>
-		<param-value>classpath:config/log4j2.xml</param-value>
-	</context-param>
+	<context-param><param-name>log4jConfiguration</param-name><param-value>classpath:/config/log4j2.xml</param-value></context-param>
 	<listener><listener-class>org.apache.logging.log4j.web.Log4jServletContextListener</listener-class></listener>
 	
-	<filter>
-		<filter-name>websso_logout</filter-name>
-		<filter-class>dswork.sso.WebLogoutFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>websso_logout</filter-name>
-		<url-pattern>/logout</url-pattern>
-	</filter-mapping>
+	<context-param><param-name>dsworkSSOConfiguration</param-name><param-value>/config/sso.properties</param-value></context-param>
+
+	<servlet>
+		<servlet-name>websso_logout</servlet-name>
+		<servlet-class>dswork.sso.WebLogoutServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping><servlet-name>websso_logout</servlet-name><url-pattern>/logout</url-pattern></servlet-mapping>
 
 	<filter>
 		<filter-name>websso</filter-name>
 		<filter-class>dswork.sso.WebFilter</filter-class>
-		<init-param><param-name>ssoURL</param-name>     <param-value>http://127.0.0.1:8888/sso/api</param-value></init-param>
-		<init-param><param-name>ssoName</param-name>    <param-value>portal</param-value></init-param>
-		<init-param><param-name>ssoPassword</param-name><param-value>1</param-value></init-param>
-		<init-param><param-name>webURL</param-name>     <param-value>http://127.0.0.1:8888/sso</param-value></init-param>
-		<init-param><param-name>ignoreURL</param-name>  <param-value>/menu.jsp,/m.jsp</param-value></init-param>
-		<init-param><param-name>sameDomain</param-name> <param-value>true</param-value></init-param>
 	</filter>
-	<filter-mapping>
-		<filter-name>websso</filter-name>
-		<url-pattern>/frame/*</url-pattern>
-	</filter-mapping>
+	<filter-mapping><filter-name>websso</filter-name><url-pattern>/frame/*</url-pattern></filter-mapping>
 	
 	<error-page><error-code>400</error-code><location>/50x.jsp</location></error-page>
 	<error-page><error-code>404</error-code><location>/50x.jsp</location></error-page>
