--- a/DsCommon/config/config/config.properties
+++ b/DsCommon/config/config/config.properties
@@ -1,3 +1,13 @@
+#dev coding
+dswork.active=dev
+
+######## jdbc-test
+jdbc.driverClassName=dswork.jdbc.DriverSpy
+jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
+jdbc.url=jdbc:mysql://127.0.0.1:3306/dswork?characterEncoding=UTF-8&allowMultiQueries=true
+jdbc.username=dswork
+jdbc.password=dswork
+
 ######## jdbc
 jdbc.driverClassName=dswork.jdbc.DriverSpy
 jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
