--- a/DsEp/config/config/config.properties
+++ b/DsEp/config/config/config.properties
@@ -1,3 +1,5 @@
+dswork.active=dev
+
 ######## jdbc
 jdbc.driverClassName=dswork.jdbc.DriverSpy
 jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
