--- a/DsCommon/config/config/config.properties
+++ b/DsCommon/config/config/config.properties
@@ -1,11 +1,16 @@
 dswork.active=dev
-
 ######## jdbc
 jdbc.driverClassName=dswork.jdbc.DriverSpy
 jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
-jdbc.url=jdbc:mysql://127.0.0.1:3306/dswork?characterEncoding=UTF-8&allowMultiQueries=true
-jdbc.username=dswork
-jdbc.password=dswork
+
+
+jdbc.url=jdbc:mysql://127.0.0.1:3306/sso?characterEncoding=UTF-8&allowMultiQueries=true
+jdbc.username=sso
+jdbc.password=sso@DB321
+
+jdbc.read.url=jdbc:mysql://127.0.0.1:3306/sso?characterEncoding=UTF-8&allowMultiQueries=true
+jdbc.read.username=sso
+jdbc.read.password=sso@DB321
 
 dswork.id.size=10
 dswork.id.code=9
