--- a/DsCommon/config/config/dev/config.properties
+++ b/DsCommon/config/config/dev/config.properties
@@ -1,16 +1,15 @@
-######## jdbc-test
+######## jdbc
 jdbc.driverClassName=dswork.jdbc.DriverSpy
 jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
+
+
 jdbc.url=jdbc:mysql://127.0.0.1:3306/dswork?characterEncoding=UTF-8&allowMultiQueries=true
 jdbc.username=dswork
 jdbc.password=dswork
 
-######## jdbc
-jdbc.driverClassName=dswork.jdbc.DriverSpy
-jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
-jdbc.url=jdbc:mysql://127.0.0.1:3306/dswork?characterEncoding=UTF-8&allowMultiQueries=true
-jdbc.username=dswork
-jdbc.password=dswork
+jdbc.read.url=jdbc:mysql://127.0.0.1:3306/dswork?characterEncoding=UTF-8&allowMultiQueries=true
+jdbc.read.username=dswork
+jdbc.read.password=dswork
 
 dswork.id.size=10
 dswork.id.code=9
