--- a/DsEp/config/config/config.properties
+++ b/DsEp/config/config/config.properties
@@ -1,20 +1,29 @@
 dswork.active=dev
+dswork.id.size=10
+dswork.id.code=2
+
 
 ######## jdbc
 jdbc.driverClassName=dswork.jdbc.DriverSpy
 jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
+
 jdbc.url=jdbc:mysql://127.0.0.1:3306/dswork?characterEncoding=UTF-8&allowMultiQueries=true
 jdbc.username=dswork
 jdbc.password=dswork
+jdbc.minEvictableIdleTimeMillis=900000
+jdbc.timeBetweenEvictionRunsMillis=900000
+jdbc.maxActive=50
+jdbc.maxIdle=50
+jdbc.maxWait=60000
 
-
-email.smtp=
-email.account=
-email.password=
-
-
-gov.xzsp.lxhurl=http://127.0.0.1:8888/xzsp/lsh.jsp
-gov.xzsp.sendurl=http://127.0.0.1:8888/xzsp/send.jsp
+jdbc.read.url=jdbc:mysql://127.0.0.1:3306/dswork?characterEncoding=UTF-8&allowMultiQueries=true
+jdbc.read.username=dswork
+jdbc.read.password=dswork
+jdbc.read.minEvictableIdleTimeMillis=900000
+jdbc.read.timeBetweenEvictionRunsMillis=900000
+jdbc.read.maxActive=50
+jdbc.read.maxIdle=50
+jdbc.read.maxWait=60000
 
 
 ######## jskeyupload
@@ -25,5 +34,10 @@ jskey.upload.image=jpg,jpeg,gif,png
 jskey.upload.file=bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xlsx,zip,7z
 
 
-dswork.id.size=10
-dswork.id.code=1
+email.smtp=
+email.account=
+email.password=
+
+
+gov.xzsp.lxhurl=http://127.0.0.1:8888/xzsp/lsh.jsp
+gov.xzsp.sendurl=http://127.0.0.1:8888/xzsp/send.jsp
