--- a/DsEp/web/WEB-INF/web.xml
+++ b/DsEp/web/WEB-INF/web.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.0" 
-	xmlns="http://java.sun.com/xml/ns/javaee" 
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
-	metadata-complete="false">
-
+<web-app metadata-complete="false">
 	<filter><filter-name>authFilter</filter-name><filter-class>common.auth.AuthFilter</filter-class></filter>
 	<filter-mapping><filter-name>authFilter</filter-name><url-pattern>/ep/*</url-pattern></filter-mapping>
 	<filter-mapping><filter-name>authFilter</filter-name><url-pattern>/manage/*</url-pattern></filter-mapping>
