--- a/DsWorkJava/web/WEB-INF/web.xml
+++ b/DsWorkJava/web/WEB-INF/web.xml
@@ -1,9 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?> 
-<web-app version="2.5" 
-	xmlns="http://java.sun.com/xml/ns/javaee" 
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app metadata-complete="true">
 	<filter>
 		<filter-name>encodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
