--- a/DsDemo/DemoJava/src/config/config.properties
+++ b/DsDemo/DemoJava/src/config/config.properties
@@ -1,3 +1,5 @@
+dswork.active=dev
+
 ######## jdbc
 jdbc.driverClassName=dswork.jdbc.DriverSpy
 #dswork.jdbc.drivers=com.mysql.jdbc.Driver,org.sqlite.JDBC
