--- a/DsDemo/DemoJava/src/config/config.properties
+++ b/DsDemo/DemoJava/src/config/config.properties
@@ -3,12 +3,28 @@ dswork.active=dev
 ######## jdbc
 jdbc.driverClassName=dswork.jdbc.DriverSpy
 #dswork.jdbc.drivers=com.mysql.jdbc.Driver,org.sqlite.JDBC
-
 jdbc.dialect.hibernate=org.hibernate.dialect.SQLiteDialect
 jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
+
+
 jdbc.url=jdbc:sqlite::resource:db
 jdbc.username=demo
 jdbc.password=demo
+jdbc.minEvictableIdleTimeMillis=900000
+jdbc.timeBetweenEvictionRunsMillis=900000
+jdbc.maxActive=50
+jdbc.maxIdle=50
+jdbc.maxWait=60000
+
+
+jdbc.read.url=jdbc:sqlite::resource:db2
+jdbc.read.username=demo
+jdbc.read.password=demo
+jdbc.read.minEvictableIdleTimeMillis=900000
+jdbc.read.timeBetweenEvictionRunsMillis=900000
+jdbc.read.maxActive=50
+jdbc.read.maxIdle=50
+jdbc.read.maxWait=60000
 
 
 ######## jskeyupload
