--- a/DsCommon/config/config/config.properties
+++ b/DsCommon/config/config/config.properties
@@ -6,7 +6,7 @@ dswork.id.code=9
 jdbc.driverClassName=dswork.jdbc.DriverSpy
 jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
 
-jdbc.url=jdbc:mysql://127.0.0.1:3306/sso?characterEncoding=UTF-8&allowMultiQueries=true
+jdbc.url=jdbc:mysql://dbserver:3306/sso?characterEncoding=UTF-8&allowMultiQueries=true
 jdbc.username=sso
 jdbc.password=sso@DB321
 jdbc.minEvictableIdleTimeMillis=900000
@@ -15,7 +15,7 @@ jdbc.maxActive=50
 jdbc.maxIdle=50
 jdbc.maxWait=60000
 
-jdbc.read.url=jdbc:mysql://127.0.0.1:3306/sso?characterEncoding=UTF-8&allowMultiQueries=true
+jdbc.read.url=jdbc:mysql://dbserver:3306/sso?characterEncoding=UTF-8&allowMultiQueries=true
 jdbc.read.username=sso
 jdbc.read.password=sso@DB321
 jdbc.read.minEvictableIdleTimeMillis=900000
