--- a/DsDemo/DemoJava/src/config/config.properties
+++ b/DsDemo/DemoJava/src/config/config.properties
@@ -1,31 +1,31 @@
 dswork.active=dev
 
 ######## jdbc
-jdbc.driverClassName=dswork.jdbc.DriverSpy
+#jdbc.driverClassName=dswork.jdbc.DriverSpy
 #dswork.jdbc.drivers=com.mysql.jdbc.Driver,org.sqlite.JDBC
 jdbc.dialect.hibernate=org.hibernate.dialect.SQLiteDialect
-jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
-
+#default config is LimitOffsetDialect
+#jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
 
 jdbc.url=jdbc:sqlite::resource:db
 jdbc.username=demo
 jdbc.password=demo
-jdbc.minEvictableIdleTimeMillis=900000
-jdbc.timeBetweenEvictionRunsMillis=900000
-jdbc.maxActive=50
-jdbc.maxIdle=50
-jdbc.maxWait=60000
-
+#jdbc.minEvictableIdleTimeMillis=900000
+#jdbc.timeBetweenEvictionRunsMillis=900000
+#jdbc.maxActive=50
+#jdbc.maxIdle=50
+#jdbc.maxWait=60000
 
 jdbc.read.url=jdbc:sqlite::resource:db2
-jdbc.read.username=demo
-jdbc.read.password=demo
-jdbc.read.minEvictableIdleTimeMillis=900000
-jdbc.read.timeBetweenEvictionRunsMillis=900000
-jdbc.read.maxActive=50
-jdbc.read.maxIdle=50
-jdbc.read.maxWait=60000
+#jdbc.read.username=demo
+#jdbc.read.password=demo
+#jdbc.read.minEvictableIdleTimeMillis=900000
+#jdbc.read.timeBetweenEvictionRunsMillis=900000
+#jdbc.read.maxActive=50
+#jdbc.read.maxIdle=50
+#jdbc.read.maxWait=60000
 
+dswork.mapper.mybatis=classpath*:/testwork/mapper/**/*.map.xml
 
 ######## jskeyupload
 jskey.upload.savePath=/DsworkUploadTemp
