--- a/DsCommon/config/config/dev/config.properties
+++ b/DsCommon/config/config/dev/config.properties
@@ -5,9 +5,13 @@ dswork.id.code=9
 #jdbc.driverClassName=dswork.jdbc.DriverSpy
 #jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
 
-jdbc.url=jdbc:mysql://127.0.0.1:3306/dswork?characterEncoding=UTF-8&allowMultiQueries=true
-jdbc.username=dswork
-jdbc.password=dswork
+jdbc.url=jdbc:mysql://dbserver:3306/sso?characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true
+jdbc.username=sso
+jdbc.password=sso@DB321
+
+#jdbc.url=jdbc:mysql://127.0.0.1:3306/dswork?characterEncoding=UTF-8&allowMultiQueries=true
+#jdbc.username=dswork
+#jdbc.password=dswork
 #jdbc.minEvictableIdleTimeMillis=900000
 #jdbc.timeBetweenEvictionRunsMillis=900000
 #jdbc.maxActive=50
