--- a/DsEp/config/config/config.properties
+++ b/DsEp/config/config/config.properties
@@ -11,11 +11,10 @@ jdbc.read.username=dswork
 jdbc.read.password=dswork
 
 ######## jskeyupload
-jskey.upload.savePath=/DsworkUploadTemp
-#jskey.upload.maxSize=bit
-jskey.upload.maxSize=10485760
-jskey.upload.image=jpg,jpeg,gif,png
-jskey.upload.file=bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xlsx,zip,7z
+#jskey.upload.savePath=/DsworkUploadTemp
+#jskey.upload.maxSize=10485760
+#jskey.upload.image=jpg,jpeg,gif,png
+#jskey.upload.file=bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xlsx,zip,7z
 
 
 email.smtp=
