--- a/DsDemo/DemoJava/src/config/config.properties
+++ b/DsDemo/DemoJava/src/config/config.properties
@@ -1,5 +1,7 @@
 dswork.active=dev
-dswork.mapper.mybatis=classpath*:/testwork/mapper/**/*.map.xml
+dswork.base-package=testwork,testwork
+dswork.base-mapper=/testwork
+#dswork.mapper.extend=classpath*:/testwork/**/*.map.xml
 
 ######## jdbc
 #jdbc.driverClassName=dswork.jdbc.DriverSpy
@@ -17,15 +19,15 @@ jdbc.password=demo
 #jdbc.maxIdle=50
 #jdbc.maxWait=60000
 
-jdbc.read.url=jdbc:sqlite::resource:db2
-#jdbc.read.username=demo
-#jdbc.read.password=demo
+
+jdbc.read.url=jdbc:sqlite::resource:db
+jdbc.read.username=demo
+jdbc.read.password=demo
 #jdbc.read.minEvictableIdleTimeMillis=900000
 #jdbc.read.timeBetweenEvictionRunsMillis=900000
 #jdbc.read.maxActive=50
 #jdbc.read.maxIdle=50
 #jdbc.read.maxWait=60000
-
 
 ######## jskeyupload
 jskey.upload.savePath=/WorkServer/WebIO/temp
