--- a/DsDemo/DemoJava/src/config/config.properties
+++ b/DsDemo/DemoJava/src/config/config.properties
@@ -19,7 +19,7 @@ jdbc.password=demo
 #jdbc.maxWait=60000
 
 
-jdbc.read.url=jdbc:sqlite::resource:db
+jdbc.read.url=jdbc:sqlite::resource:db2
 jdbc.read.username=demo
 jdbc.read.password=demo
 #jdbc.read.minEvictableIdleTimeMillis=900000
