--- a/DsDemo/DemoJava/.classpath
+++ b/DsDemo/DemoJava/.classpath
@@ -41,5 +41,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Lib/module/dswork/cs/dswork.cs.jar"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
