--- a/DsCommon/config/config/config.properties
+++ b/DsCommon/config/config/config.properties
@@ -2,7 +2,7 @@ dswork.active=dev
 dswork.id.size=10
 dswork.id.code=9
 
-######## jdbc
 jdbc.url=jdbc:mysql://dbserver:3306/sso?characterEncoding=UTF-8&allowMultiQueries=true
 jdbc.username=sso
 jdbc.password=sso@DB321
+jdbc.read.url=jdbc:mysql://readserver:3306/sso?characterEncoding=UTF-8&allowMultiQueries=true
