--- a/DsEp/release/www/WEB-INF/classes/config/config.properties
+++ b/DsEp/release/www/WEB-INF/classes/config/config.properties
@@ -1,21 +1,7 @@
-######## jdbc
-jdbc.driverClassName=dswork.jdbc.DriverSpy
-jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
+dswork.id.size=10
+dswork.id.code=2
 
 jdbc.url=jdbc:mysql://dbserver:3306/www?characterEncoding=UTF-8&allowMultiQueries=true
 jdbc.username=www
 jdbc.password=www@DB321
-jdbc.minEvictableIdleTimeMillis=900000
-jdbc.timeBetweenEvictionRunsMillis=900000
-jdbc.maxActive=50
-jdbc.maxIdle=50
-jdbc.maxWait=60000
-
-jdbc.read.url=jdbc:mysql://dbserver:3306/www?characterEncoding=UTF-8&allowMultiQueries=true
-jdbc.read.username=www
-jdbc.read.password=www@DB321
-jdbc.read.minEvictableIdleTimeMillis=900000
-jdbc.read.timeBetweenEvictionRunsMillis=900000
-jdbc.read.maxActive=50
-jdbc.read.maxIdle=50
-jdbc.read.maxWait=60000
+#jdbc.read.url=jdbc:mysql://readserver:3306/www?characterEncoding=UTF-8&allowMultiQueries=true
