--- a/DsEp/release/www/WEB-INF/web.xml
+++ b/DsEp/release/www/WEB-INF/web.xml
@@ -1,15 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.0" 
-	xmlns="http://java.sun.com/xml/ns/javaee" 
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
-	metadata-complete="false">
+<web-app metadata-complete="false">
 
-	<error-page><error-code>400</error-code><location>/50x.jsp</location></error-page>
-	<error-page><error-code>404</error-code><location>/50x.jsp</location></error-page>
-	<error-page><error-code>500</error-code><location>/50x.jsp</location></error-page>
-	<session-config><session-timeout>120</session-timeout></session-config>
-	<welcome-file-list><welcome-file>index.jsp</welcome-file></welcome-file-list>
 <!--
 	<filter>
 		<filter-name>websso</filter-name>
@@ -23,9 +14,19 @@
 	</filter>
 	<filter-mapping><filter-name>authOwnSSOFilter</filter-name><url-pattern>/cms/*</url-pattern></filter-mapping>
 -->
+
 	<filter>
 		<filter-name>authOwnFilter</filter-name>
 		<filter-class>common.authown.AuthOwnFilter</filter-class>
 	</filter>
 	<filter-mapping><filter-name>authOwnFilter</filter-name><url-pattern>/cms/*</url-pattern></filter-mapping>
+
+
+	<error-page><error-code>400</error-code><location>/50x.jsp</location></error-page>
+	<error-page><error-code>404</error-code><location>/50x.jsp</location></error-page>
+	<error-page><error-code>500</error-code><location>/50x.jsp</location></error-page>
+	<session-config><session-timeout>120</session-timeout></session-config>
+	<welcome-file-list><welcome-file>index.jsp</welcome-file></welcome-file-list>
+</web-app>
+	
 </web-app>
