--- a/DsEp/config/config/config.properties
+++ b/DsEp/config/config/config.properties
@@ -2,20 +2,10 @@ dswork.active=dev
 dswork.id.size=10
 dswork.id.code=2
 
-jdbc.url=jdbc:mysql://127.0.0.1:3306/dswork?characterEncoding=UTF-8&allowMultiQueries=true
-jdbc.username=dswork
-jdbc.password=dswork
-
-jdbc.read.url=jdbc:mysql://127.0.0.1:3306/dswork?characterEncoding=UTF-8&allowMultiQueries=true
-jdbc.read.username=dswork
-jdbc.read.password=dswork
-
-######## jskeyupload
-#jskey.upload.savePath=/DsworkUploadTemp
-#jskey.upload.maxSize=10485760
-#jskey.upload.image=jpg,jpeg,gif,png
-#jskey.upload.file=bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xlsx,zip,7z
-
+jdbc.url=jdbc:mysql://dbserver:3306/www?characterEncoding=UTF-8&allowMultiQueries=true
+jdbc.username=www
+jdbc.password=www@DB321
+#jdbc.read.url=jdbc:mysql://readserver:3306/www?characterEncoding=UTF-8&allowMultiQueries=true
 
 email.smtp=
 email.account=
