--- a/CodeBuilder/java/build.xml
+++ b/CodeBuilder/java/build.xml
@@ -1,8 +1,8 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <project default="init">
 <target name="init">
 	<java classname="dswork.builder.Builder" fork="true">
-		<arg value="bulider.xml" />
+		<arg value="builder.xml" />
 		<classpath>
 			<pathelement path="./lib/dswork.builder.jar" />
 			<pathelement path="./lib/freemarker-2.3.27.jar" />
