--- a/CodeBuilder/java/build.xml
+++ b/CodeBuilder/java/build.xml
@@ -6,6 +6,7 @@
 		<classpath>
 			<pathelement path="./lib/dswork.builder.jar" />
 			<pathelement path="./lib/freemarker-2.3.27.jar" />
+			<pathelement path="./../../Lib/database/mysql/mysql-connector-java-5.1.41-bin.jar" />
 		</classpath>
 		<sysproperty key="file.encoding" value="UTF-8" />
 	</java>
