--- a/DsWorkJava/.classpath
+++ b/DsWorkJava/.classpath
@@ -40,5 +40,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="/Lib/module/lucene/lucene-core-5.5.4.jar"/>
 	<classpathentry kind="lib" path="/Lib/module/template/freemarker-2.3.27.jar"/>
+	<classpathentry kind="lib" path="/Lib/database/mssql/mssql-jdbc4.jar"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
