--- a/DsCommon/web/WEB-INF/web.xml
+++ b/DsCommon/web/WEB-INF/web.xml
@@ -28,6 +28,8 @@
 	<filter-mapping><filter-name>websso</filter-name><url-pattern>/common/userrole/*</url-pattern></filter-mapping>
 	<filter-mapping><filter-name>websso</filter-name><url-pattern>/common/userorg/*</url-pattern></filter-mapping>
 	<filter-mapping><filter-name>websso</filter-name><url-pattern>/common/usertype/*</url-pattern></filter-mapping>
+
+	<filter-mapping><filter-name>websso</filter-name><url-pattern>/common/ex/*</url-pattern></filter-mapping>
 	
 	<filter-mapping><filter-name>websso</filter-name><url-pattern>/index.jsp</url-pattern></filter-mapping>
 
