--- a/DsWorkJava/dswork.config/config/config.properties
+++ b/DsWorkJava/dswork.config/config/config.properties
@@ -1,17 +1,27 @@
 ######## jdbc
-jdbc.driverClassName=dswork.jdbc.DriverSpy
+#jdbc.driverClassName=dswork.jdbc.DriverSpy
 #dswork.jdbc.drivers=com.mysql.jdbc.Driver,org.sqlite.JDBC
+#jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
 
-jdbc.dialect.hibernate=org.hibernate.dialect.SQLiteDialect
-jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
+dswork.active=dev
+dswork.base-package=testwork,testwork
+
 jdbc.url=jdbc:sqlite::resource:db
 jdbc.username=demo
 jdbc.password=demo
+#jdbc.minEvictableIdleTimeMillis=900000
+#jdbc.timeBetweenEvictionRunsMillis=900000
+#jdbc.maxActive=50
+#jdbc.maxIdle=50
+#jdbc.maxWait=60000
+jdbc.read.url=jdbc:mysql://readserver:3306/demo?characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true
+#jdbc.read.username=demo
+#jdbc.read.password=demo
+
 
 ##Oracle
-#hibernate.dialect=org.hibernate.dialect.OracleDialect
-#mybatis.dialect=dswork.core.mybatis.dialect.OracleDialect
-#jdbc.driverClassName=oracle.jdbc.OracleDriver
+#jdbc.dialect=oracle
+##jdbc.driverClassName=oracle.jdbc.OracleDriver
 #jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:sid
 #jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521/service_name
 #jdbc.url=jdbc:oracle:thin:@//127.0.0.1:1521/service_name
@@ -20,42 +30,38 @@ jdbc.password=demo
 #jdbc.password=Password
 
 ##SQLite
-#hibernate.dialect=org.hibernate.dialect.SQLiteDialect
-#mybatis.dialect=dswork.core.mybatis.dialect.LimitOffsetDialect
-#jdbc.driverClassName=org.sqlite.JDBC
+#jdbc.dialect=sqlite
+##jdbc.driverClassName=org.sqlite.JDBC
 #jdbc.url=jdbc:sqlite::resource:db
 #jdbc.url=jdbc:sqlite:../webapps/[project]/WEB-INF/classes/db
 #jdbc.username=UserId
 #jdbc.password=Password
 
 ##MySQL
-#hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#mybatis.dialect=dswork.core.mybatis.dialect.LimitOffsetDialect
-#jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://127.0.0.1:3306/db?characterEncoding=UTF-8&allowMultiQueries=true
+#jdbc.dialect=mysql
+##jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://127.0.0.1:3306/db?characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true
 #jdbc.username=UserId
 #jdbc.password=Password
 
 ##MSSQLServer 2000
-#hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-#mybatis.dialect=tecamo.core.mybatis.dialect.SQLServer2000Dialect
-#jdbc.driverClassName=com.microsoft.jdbc.sqlserver.SQLServerDriver
-#jdbc.url=jdbc:microsoft:sqlserver://localhost:1433; DatabaseName=demo
+#jdbc.dialect=mssql2000
+##jdbc.driverClassName=com.microsoft.jdbc.sqlserver.SQLServerDriver
+#jdbc.url=jdbc:microsoft:sqlserver://localhost:1433;DatabaseName=demo
 #jdbc.username=UserId
 #jdbc.password=Password
 
 ##MSSQLServer 2005-2008
-#hibernate.dialect=org.hibernate.dialect.SQLServer2008Dialect
-#mybatis.dialect=tecamo.core.mybatis.dialect.SQLServerDialect
-#jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#jdbc.url=jdbc:sqlserver://localhost:1433; DatabaseName=demo
+#jdbc.dialect=mssql2005
+#jdbc.dialect=mssql2008
+##jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#jdbc.url=jdbc:sqlserver://localhost:1433;DatabaseName=demo
 #jdbc.username=UserId
 #jdbc.password=Password
 
-##MSSQLServer 2012
-#hibernate.dialect=org.hibernate.dialect.SQLServer2008Dialect
-#mybatis.dialect=tecamo.core.mybatis.dialect.SQLServer2012Dialect
-#jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#jdbc.url=jdbc:sqlserver://localhost:1433; DatabaseName=demo
+##MSSQLServer 2012 and later
+#jdbc.dialect=mssql
+##jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#jdbc.url=jdbc:sqlserver://localhost:1433;DatabaseName=demo
 #jdbc.username=UserId
 #jdbc.password=Password
