--- a/DsDemo/DemoJava/src/config/dev/config.properties
+++ b/DsDemo/DemoJava/src/config/dev/config.properties
@@ -1,4 +1,5 @@
 dswork.base-package=testwork,testwork
+#dswork.datasource=com.alibaba.druid.pool.DruidDataSource
 #dswork.mapper.extend=classpath*:/testwork/**/*.map.xml
 
 ######## jdbc
@@ -12,18 +13,36 @@ jdbc.username=demo
 jdbc.password=demo
 #jdbc.minEvictableIdleTimeMillis=900000
 #jdbc.timeBetweenEvictionRunsMillis=900000
-#jdbc.maxActive=50
+#jdbc.initialSize=1
+#jdbc.minIdle=1
 #jdbc.maxIdle=50
+#jdbc.maxActive=50
 #jdbc.maxWait=60000
+#jdbc.validationQuery=select 'x'
+#jdbc.testWhileIdle=true
+#jdbc.testOnBorrow=false
+#jdbc.testOnReturn=false
+#jdbc.poolPreparedStatements=false
+#jdbc.maxPoolPreparedStatementPerConnectionSize=-1
+#jdbc.filters=
 
 jdbc.read.url=jdbc:sqlite::resource:db2
 jdbc.read.username=demo
 jdbc.read.password=demo
 #jdbc.read.minEvictableIdleTimeMillis=900000
 #jdbc.read.timeBetweenEvictionRunsMillis=900000
-#jdbc.read.maxActive=50
+#jdbc.read.initialSize=1
+#jdbc.read.minIdle=1
 #jdbc.read.maxIdle=50
+#jdbc.read.maxActive=50
 #jdbc.read.maxWait=60000
+#jdbc.read.validationQuery=select 'x'
+#jdbc.read.testWhileIdle=true
+#jdbc.read.testOnBorrow=false
+#jdbc.read.testOnReturn=false
+#jdbc.read.poolPreparedStatements=false
+#jdbc.read.maxPoolPreparedStatementPerConnectionSize=-1
+#jdbc.read.filters=
 
 ######## jskeyupload
 jskey.upload.savePath=/WorkServer/WebIO/temp
