--- a/Lib/builder/java/build.xml
+++ b/Lib/builder/java/build.xml
@@ -2,7 +2,7 @@
 <project default="init">
 <target name="init">
 	<java classname="dswork.builder.Builder" fork="true">
-		<arg value="builder.xml" />
+		<arg value="your.xml" />
 		<classpath>
 			<pathelement path="./lib/dswork.builder.jar" />
 			<pathelement path="./../../module/template/freemarker-2.3.27.jar" />
