--- a/DsCommon/config/config/sso.properties
+++ b/DsCommon/config/config/sso.properties
@@ -2,7 +2,7 @@
 sso.ssoURL=http://127.0.0.1:8888/sso/api
 sso.ssoName=DsCommon
 sso.ssoPassword=1
-sso.webURL=http://127.0.0.1:8888/sso
+sso.webURL=https://121.8.226.113/sso
 sso.ignoreURL=/menu.jsp,/m.jsp
 sso.sameDomain=true
-sso.systemURL=http://127.0.0.1:8888/portal
+#sso.systemURL=http://127.0.0.1:8888/portal
