--- a/DsCommon/config/config/config.properties
+++ b/DsCommon/config/config/config.properties
@@ -2,6 +2,11 @@ dswork.active=dev
 dswork.id.size=10
 dswork.id.code=9
 
+#jdbc.common.dialect.name=mysql
+jdbc.common.url=jdbc:mysql://dbserver:3306/sso?characterEncoding=UTF-8&allowMultiQueries=true
+jdbc.common.username=sso
+jdbc.common.password=sso@DB321
+
 jdbc.url=jdbc:mysql://dbserver:3306/sso?characterEncoding=UTF-8&allowMultiQueries=true
 jdbc.username=sso
 jdbc.password=sso@DB321
