--- a/DsDemo/DemoJava/src/config/dev/config.properties
+++ b/DsDemo/DemoJava/src/config/dev/config.properties
@@ -1,13 +1,12 @@
 dswork.base-package=testwork,testwork
 #dswork.datasource=com.alibaba.druid.pool.DruidDataSource
-#dswork.mapper.extend=classpath*:/testwork/**/*.map.xml
 
-######## jdbc
+######################################## jdbc ########################################
 #dswork.jdbc.drivers=com.mysql.jdbc.Driver,org.sqlite.JDBC
-#jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
-#jdbc.dialect(mysql,sqlite,gbase,oracle,db2,mssql,mssql2000,mssql2005,mssql2008)
-#jdbc.dialect=mysql
-jdbc.dialect=sqlite
+
+#jdbc.dialect.name(gbase,mariadb,mysql,postgresql,sqlite,dm,oracle,db2,derby,sqlserver,sqlserver2000,sqlserver2005,sqlserver2008,sqlserver2012)
+#jdbc.mapper=classpath*:/testwork/**/*.map.xml
+jdbc.dialect.name=sqlite
 jdbc.url=jdbc:sqlite::resource:db
 jdbc.username=demo
 jdbc.password=demo
@@ -51,7 +50,7 @@ jskey.upload.image=jpg,jpeg,gif,png
 jskey.upload.file=bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xlsx,zip,7z
 
 ##Oracle
-#jdbc.dialect=oracle
+#jdbc.dialect.name=oracle
 ##jdbc.driverClassName=oracle.jdbc.OracleDriver
 #jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:sid
 #jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521/service_name
@@ -61,7 +60,7 @@ jskey.upload.file=bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xls
 #jdbc.password=Password
 
 ##SQLite
-#jdbc.dialect=sqlite
+#jdbc.dialect.name=sqlite
 ##jdbc.driverClassName=org.sqlite.JDBC
 #jdbc.url=jdbc:sqlite::resource:db
 #jdbc.url=jdbc:sqlite:../webapps/[project]/WEB-INF/classes/db
@@ -69,29 +68,42 @@ jskey.upload.file=bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xls
 #jdbc.password=Password
 
 ##MySQL
-#jdbc.dialect=mysql
+#jdbc.dialect.name=mysql
 ##jdbc.driverClassName=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://127.0.0.1:3306/db?characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true
 #jdbc.username=UserId
 #jdbc.password=Password
 
 ##MSSQLServer 2000
-#jdbc.dialect=mssql2000
+#jdbc.dialect.name=sqlserver2000
 ##jdbc.driverClassName=com.microsoft.jdbc.sqlserver.SQLServerDriver
 #jdbc.url=jdbc:microsoft:sqlserver://localhost:1433;DatabaseName=demo
 #jdbc.username=UserId
 #jdbc.password=Password
 
-##MSSQLServer 2005-2008
-#jdbc.dialect=mssql2005
-#jdbc.dialect=mssql2008
+##MSSQLServer 2005
+#jdbc.dialect.name=sqlserver2005
+##jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#jdbc.url=jdbc:sqlserver://localhost:1433;DatabaseName=demo
+#jdbc.username=UserId
+#jdbc.password=Password
+
+##MSSQLServer 2008
+#jdbc.dialect.name=sqlserver2008
+##jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#jdbc.url=jdbc:sqlserver://localhost:1433;DatabaseName=demo
+#jdbc.username=UserId
+#jdbc.password=Password
+
+##MSSQLServer 2012
+#jdbc.dialect.name=sqlserver2012
 ##jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #jdbc.url=jdbc:sqlserver://localhost:1433;DatabaseName=demo
 #jdbc.username=UserId
 #jdbc.password=Password
 
 ##MSSQLServer 2012 and later
-#jdbc.dialect=mssql
+#jdbc.dialect.name=sqlserver
 ##jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #jdbc.url=jdbc:sqlserver://localhost:1433;DatabaseName=demo
 #jdbc.username=UserId
