--- a/Lib/builder/htmlgen/build.xml
+++ b/Lib/builder/htmlgen/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <project default="init">
 <target name="init">
-	<exec command="E:/Workspaces/MySpace/dswork/Lib/builder/htmlgen/htmlgen.exe" failonerror="true"></exec>
+	<exec command="htmlgen.exe" failonerror="true"></exec>
 </target>
 </project>
