--- a/DsWorkJava/.classpath
+++ b/DsWorkJava/.classpath
@@ -42,5 +42,7 @@
 	<classpathentry kind="lib" path="/Lib/module/lucene/lucene-core-5.5.4.jar"/>
 	<classpathentry kind="lib" path="/Lib/module/template/freemarker-2.3.27.jar"/>
 	<classpathentry kind="lib" path="/Lib/database/mssql/mssql-jdbc4.jar"/>
+	<classpathentry kind="lib" path="/Lib/tomcat_session/manager/memcached-session-manager-2.3.0.jar"/>
+	<classpathentry kind="lib" path="/Lib/tomcat_session/manager/memcached-session-manager-tc8-2.3.0.jar"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
