--- a/DsSSO/sso/src/config/dev/config.properties
+++ b/DsSSO/sso/src/config/dev/config.properties
@@ -1,4 +1,4 @@
 
-jdbc.url=jdbc:mysql://127.0.0.1:3306/sso?characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true
+jdbc.url=jdbc:mysql://127.0.0.1:3306/dswork?characterEncoding=UTF-8&allowMultiQueries=true
 jdbc.username=dswork
 jdbc.password=dswork
