--- a/DsWorkJava/dswork-core/pom.xml
+++ b/DsWorkJava/dswork-core/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.github.skeychen</groupId>
 	<artifactId>dswork-core</artifactId>
-	<version>8.8.0.RELEASE</version>
+	<version>8.8.0</version>
 
 	<name>dswork-core</name>
 	<description>dswork-core</description>
@@ -135,7 +135,7 @@
 		<dependency><groupId>aopalliance</groupId><artifactId>aopalliance</artifactId><version>1.0</version></dependency>
 		
 		<dependency><groupId>javax.servlet</groupId><artifactId>jstl</artifactId><version>1.2</version></dependency>
-		<dependency><groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId><version>3.0.1</version></dependency>
+		<dependency><groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId><version>3.0.1</version><scope>provided</scope></dependency>
 		
 		<dependency><groupId>antlr</groupId><artifactId>antlr</artifactId><version>2.7.7</version></dependency>
 		
