--- a/DsWorkJava/dswork-html/pom.xml
+++ b/DsWorkJava/dswork-html/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.github.skeychen</groupId>
 	<artifactId>dswork-html</artifactId>
-	<version>8.8.0.RELEASE</version>
+	<version>8.8.0</version>
 
 	<name>dswork-html</name>
 	<description>dswork-html</description>
