--- a/DsWorkJava/dswork-http/pom.xml
+++ b/DsWorkJava/dswork-http/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.github.skeychen</groupId>
 	<artifactId>dswork-http</artifactId>
-	<version>8.8.0.RELEASE</version>
+	<version>8.8.0</version>
 
 	<name>dswork-http</name>
 	<description>dswork-http</description>
