--- a/DsWorkJava/dswork-ognl/pom.xml
+++ b/DsWorkJava/dswork-ognl/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.github.skeychen</groupId>
 	<artifactId>dswork-ognl</artifactId>
-	<version>8.8.0.RELEASE</version>
+	<version>8.8.0</version>
 
 	<name>dswork-ognl</name>
 	<description>dswork-ognl</description>
