--- a/DsWorkJava/dswork-spring/pom.xml
+++ b/DsWorkJava/dswork-spring/pom.xml
@@ -5,7 +5,7 @@
 	
 	<groupId>com.github.skeychen</groupId>
 	<artifactId>dswork-spring</artifactId>
-	<version>8.8.0.RELEASE</version>
+	<version>8.8.0</version>
 	
 	<name>dswork-spring</name>
 	<description>dswork-spring</description>
@@ -89,7 +89,7 @@
 		<spring.version>4.3.18.RELEASE</spring.version>
 	</properties>
 	<dependencies>
-		<dependency><groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId><version>3.0.1</version></dependency>
+		<dependency><groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId><version>3.0.1</version><scope>provided</scope></dependency>
 		<dependency><groupId>org.springframework</groupId><artifactId>spring-context</artifactId><version>${spring.version}</version></dependency>
 		<dependency><groupId>org.springframework</groupId><artifactId>spring-webmvc</artifactId><version>${spring.version}</version></dependency>
 	</dependencies>
