--- a/DsWorkJava/dswork-web/pom.xml
+++ b/DsWorkJava/dswork-web/pom.xml
@@ -5,7 +5,7 @@
 	
 	<groupId>com.github.skeychen</groupId>
 	<artifactId>dswork-web</artifactId>
-	<version>8.8.0.RELEASE</version>
+	<version>8.8.0</version>
 	
 	<name>dswork-web</name>
 	<description>dswork-web</description>
@@ -95,8 +95,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
-		<dependency><groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId><version>3.0.1</version></dependency>
-		<dependency><groupId>javax.servlet.jsp</groupId><artifactId>jsp-api</artifactId><version>2.2</version></dependency>
+		<dependency><groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId><version>3.0.1</version><scope>provided</scope></dependency>
+		<dependency><groupId>javax.servlet.jsp</groupId><artifactId>jsp-api</artifactId><version>2.2</version><scope>provided</scope></dependency>
 	</dependencies>
 
 </project>
