--- a/DsWorkJava/dswork-config/pom.xml
+++ b/DsWorkJava/dswork-config/pom.xml
@@ -93,11 +93,11 @@
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<dswork.version>8.8.0</dswork.version>
+		<v.dswork>8.8.0</v.dswork>
 	</properties>
 	<dependencies>
-		<dependency><groupId>com.github.skeychen</groupId><artifactId>dswork-core</artifactId><version>${dswork.version}</version></dependency>
-		<dependency><groupId>com.github.skeychen</groupId><artifactId>dswork-web</artifactId><version>${dswork.version}</version></dependency>
+		<dependency><groupId>com.github.skeychen</groupId><artifactId>dswork-core</artifactId><version>${v.dswork}</version></dependency>
+		<dependency><groupId>com.github.skeychen</groupId><artifactId>dswork-web</artifactId><version>${v.dswork}</version></dependency>
 	</dependencies>
 	
 </project>
