--- a/DsWorkJava/dswork-jdbc/pom.xml
+++ b/DsWorkJava/dswork-jdbc/pom.xml
@@ -84,12 +84,12 @@
 		</profile>
 	</profiles>
 	
-
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<v.slf4j>1.7.25</v.slf4j>
 	</properties>
 	<dependencies>
-		<dependency><groupId>org.slf4j</groupId><artifactId>slf4j-api</artifactId><version>1.7.25</version></dependency>
+		<dependency><groupId>org.slf4j</groupId><artifactId>slf4j-api</artifactId><version>${v.slf4j}</version></dependency>
 	</dependencies>
 	
 </project>
