--- a/DsWorkJava/dswork-mvc/pom.xml
+++ b/DsWorkJava/dswork-mvc/pom.xml
@@ -86,15 +86,17 @@
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring.version>4.3.18.RELEASE</spring.version>
-		<dswork.version>8.8.0</dswork.version>
+		<v.slf4j>1.7.25</v.slf4j>
+		<v.servlet-api>3.0.1</v.servlet-api>
+		<v.spring>4.3.18.RELEASE</v.spring>
+		<v.dswork>8.8.0</v.dswork>
 	</properties>
 	<dependencies>
-		<dependency><groupId>org.slf4j</groupId><artifactId>slf4j-api</artifactId><version>1.7.25</version></dependency>
-		<dependency><groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId><version>3.0.1</version><scope>provided</scope></dependency>
-		<dependency><groupId>org.springframework</groupId><artifactId>spring-web</artifactId><version>${spring.version}</version></dependency>
-		<dependency><groupId>com.github.skeychen</groupId><artifactId>dswork-core</artifactId><version>${dswork.version}</version></dependency>
-		<dependency><groupId>com.github.skeychen</groupId><artifactId>dswork-web</artifactId><version>${dswork.version}</version></dependency>
+		<dependency><groupId>org.slf4j</groupId><artifactId>slf4j-api</artifactId><version>${v.slf4j}</version></dependency>
+		<dependency><groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId><version>${v.servlet-api}</version><scope>provided</scope></dependency>
+		<dependency><groupId>org.springframework</groupId><artifactId>spring-web</artifactId><version>${v.spring}</version></dependency>
+		<dependency><groupId>com.github.skeychen</groupId><artifactId>dswork-core</artifactId><version>${v.dswork}</version></dependency>
+		<dependency><groupId>com.github.skeychen</groupId><artifactId>dswork-web</artifactId><version>${v.dswork}</version></dependency>
 	</dependencies>
 	
 </project>
