--- a/DsWorkJava/dswork-web/pom.xml
+++ b/DsWorkJava/dswork-web/pom.xml
@@ -90,13 +90,15 @@
 			</distributionManagement>
 		</profile>
 	</profiles>
-		
+	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<v.servlet-api>3.0.1</v.servlet-api>
+		<v.jsp-api>2.2</v.jsp-api>
 	</properties>
 	<dependencies>
-		<dependency><groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId><version>3.0.1</version><scope>provided</scope></dependency>
-		<dependency><groupId>javax.servlet.jsp</groupId><artifactId>jsp-api</artifactId><version>2.2</version><scope>provided</scope></dependency>
+		<dependency><groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId><version>${v.servlet-api}</version><scope>provided</scope></dependency>
+		<dependency><groupId>javax.servlet.jsp</groupId><artifactId>jsp-api</artifactId><version>${v.jsp-api}</version><scope>provided</scope></dependency>
 	</dependencies>
 
 </project>
