--- a/DsWorkJava/dswork-core/pom.xml
+++ b/DsWorkJava/dswork-core/pom.xml
@@ -101,6 +101,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<v.servlet-api>3.0.1</v.servlet-api>
 		<v.slf4j>1.7.25</v.slf4j>
 		<v.spring>4.3.18.RELEASE</v.spring>
 		<v.mybatis>3.4.6</v.mybatis>
@@ -108,6 +109,8 @@
 		<v.hibernate.core>4.2.21.Final</v.hibernate.core>
 	</properties>
 	<dependencies>
+		<dependency><groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId><version>${v.servlet-api}</version><scope>provided</scope></dependency>
+		
 		<dependency><groupId>org.slf4j</groupId><artifactId>slf4j-api</artifactId><version>${v.slf4j}</version><scope>provided</scope></dependency>
 		
 		<dependency><groupId>org.springframework</groupId><artifactId>spring-core      </artifactId><version>${v.spring}</version><scope>provided</scope></dependency>
