--- a/DsSSO/websso/.classpath
+++ b/DsSSO/websso/.classpath
@@ -23,7 +23,7 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Lib/module/dswork/common/dswork.common.jar">
+	<classpathentry kind="lib" path="/Lib/module/dswork/common/dswork-common.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
