--- a/DsEp/.classpath
+++ b/DsEp/.classpath
@@ -32,12 +32,12 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Lib/module/dswork/sso/dswork.sso.jar" sourcepath="F:/leying/Workspaces/workspaceJava/DsSSO/sso-client">
+	<classpathentry kind="lib" path="/Lib/module/dswork/sso/dswork-sso.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Lib/module/dswork/dswork.html.jar">
+	<classpathentry kind="lib" path="/Lib/module/dswork/dswork-html.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
