--- a/DsWorkJava/dswork-core/pom.xml
+++ b/DsWorkJava/dswork-core/pom.xml
@@ -5,26 +5,28 @@
 
 	<groupId>com.github.skeychen</groupId>
 	<artifactId>dswork-core</artifactId>
-	<version>8.8.0</version>
-
+	<version>${v.dswork}</version>
 	<name>dswork-core</name>
 	<description>dswork-core</description>
 	<url>https://github.com/skeychen/dswork</url>
 
-	<licenses>
-		<license>
-			<name>GNU Lesser General Public License v3.0</name>
-			<url>https://github.com/skeychen/dswork/blob/master/LICENSE</url>
-		</license>
-	</licenses>
-	
-	<developers><developer><id>skeychen</id><name>skey</name><email>249725997@qq.com</email></developer></developers>
+	<parent>
+		<groupId>com.github.skeychen</groupId>
+		<artifactId>dswork-parent</artifactId>
+		<version>${v.dswork}</version>
+		<relativePath>../dswork-parent/pom.xml</relativePath>
+	</parent>
 
-	<scm>
-		<connection>scm:git:git://github.com/skeychen/dswork</connection>
-		<developerConnection>scm:git:git://github.com/skeychen/dswork</developerConnection>
-		<url>https://github.com/skeychen/dswork</url>
-	</scm>
+	<dependencies>
+		<dependency><groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId><scope>provided</scope></dependency>
+		<dependency><groupId>org.slf4j</groupId><artifactId>slf4j-api</artifactId><scope>provided</scope></dependency>
+		<dependency><groupId>org.springframework</groupId><artifactId>spring-core</artifactId><scope>provided</scope></dependency>
+		<dependency><groupId>org.springframework</groupId><artifactId>spring-tx  </artifactId><scope>provided</scope></dependency>
+		<dependency><groupId>org.springframework</groupId><artifactId>spring-orm </artifactId><scope>provided</scope></dependency>
+		<dependency><groupId>org.mybatis</groupId><artifactId>mybatis       </artifactId><scope>provided</scope></dependency>
+		<dependency><groupId>org.mybatis</groupId><artifactId>mybatis-spring</artifactId><scope>provided</scope></dependency>
+		<dependency><groupId>org.hibernate</groupId><artifactId>hibernate-core</artifactId><scope>provided</scope></dependency>
+	</dependencies>
 
 	<build>
 		<sourceDirectory>./</sourceDirectory>
@@ -58,68 +60,4 @@
 		</plugins>
 	</build>
 
-	<profiles>
-		<profile>
-			<id>release</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-source-plugin</artifactId>
-						<executions><execution><phase>package</phase><goals><goal>jar-no-fork</goal></goals></execution></executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>2.9.1</version>
-						<executions>
-							<execution>
-								<phase>package</phase><goals><goal>jar</goal></goals>
-								<configuration><additionalparam>-Xdoclint:none</additionalparam></configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-gpg-plugin</artifactId>
-						<executions><execution><phase>verify</phase><goals><goal>sign</goal></goals></execution></executions>
-					</plugin>
-				</plugins>
-			</build>
-			<distributionManagement>
-				<snapshotRepository>
-					<id>dswork-server</id>
-					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-				</snapshotRepository>
-				<repository>
-					<id>dswork-server</id>
-					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-				</repository>
-			</distributionManagement>
-		</profile>
-	</profiles>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<v.servlet-api>3.0.1</v.servlet-api>
-		<v.slf4j>1.7.25</v.slf4j>
-		<v.spring>4.3.18.RELEASE</v.spring>
-		<v.mybatis>3.4.6</v.mybatis>
-		<v.mybatis.spring>1.3.2</v.mybatis.spring>
-		<v.hibernate.core>4.2.21.Final</v.hibernate.core>
-	</properties>
-	<dependencies>
-		<dependency><groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId><version>${v.servlet-api}</version><scope>provided</scope></dependency>
-		
-		<dependency><groupId>org.slf4j</groupId><artifactId>slf4j-api</artifactId><version>${v.slf4j}</version><scope>provided</scope></dependency>
-		
-		<dependency><groupId>org.springframework</groupId><artifactId>spring-core      </artifactId><version>${v.spring}</version><scope>provided</scope></dependency>
-		<dependency><groupId>org.springframework</groupId><artifactId>spring-tx        </artifactId><version>${v.spring}</version><scope>provided</scope></dependency>
-		<dependency><groupId>org.springframework</groupId><artifactId>spring-orm       </artifactId><version>${v.spring}</version><scope>provided</scope></dependency>
-		
-		<dependency><groupId>org.mybatis</groupId><artifactId>mybatis       </artifactId><version>${v.mybatis}       </version><scope>provided</scope></dependency>
-		<dependency><groupId>org.mybatis</groupId><artifactId>mybatis-spring</artifactId><version>${v.mybatis.spring}</version><scope>provided</scope></dependency>
-		
-		<dependency><groupId>org.hibernate</groupId><artifactId>hibernate-core</artifactId><version>${v.hibernate.core}</version><scope>provided</scope></dependency>
-	</dependencies>
 </project>
