--- a/DsWorkJava/dswork-jdbc/pom.xml
+++ b/DsWorkJava/dswork-jdbc/pom.xml
@@ -2,30 +2,25 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<groupId>com.github.skeychen</groupId>
 	<artifactId>dswork-jdbc</artifactId>
-	<version>8.8.0</version>
-	
+	<version>${v.dswork}</version>
 	<name>dswork-jdbc</name>
 	<description>dswork-jdbc</description>
 	<url>https://github.com/skeychen/dswork</url>
-	
-	<licenses>
-		<license>
-			<name>GNU Lesser General Public License v3.0</name>
-			<url>https://github.com/skeychen/dswork/blob/master/LICENSE</url>
-		</license>
-	</licenses>
-	
-	<developers><developer><id>skeychen</id><name>skey</name><email>249725997@qq.com</email></developer></developers>
-	
-	<scm>
-		<connection>scm:git:git://github.com/skeychen/dswork</connection>
-		<developerConnection>scm:git:git://github.com/skeychen/dswork</developerConnection>
-		<url>https://github.com/skeychen/dswork</url>
-	</scm>
-	
+
+	<parent>
+		<groupId>com.github.skeychen</groupId>
+		<artifactId>dswork-parent</artifactId>
+		<version>${v.dswork}</version>
+		<relativePath>../dswork-parent/pom.xml</relativePath>
+	</parent>
+
+	<dependencies>
+		<dependency><groupId>org.slf4j</groupId><artifactId>slf4j-api</artifactId></dependency>
+	</dependencies>
+
 	<build>
 		<sourceDirectory>./</sourceDirectory>
 		<directory>E:/Workspaces/jar/pom/dswork-jdbc</directory>
@@ -42,54 +37,5 @@
 			</plugin>
 		</plugins>
 	</build>
-	
-	<profiles>
-		<profile>
-			<id>release</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-source-plugin</artifactId>
-						<executions><execution><phase>package</phase><goals><goal>jar-no-fork</goal></goals></execution></executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>2.9.1</version>
-						<executions>
-							<execution>
-								<phase>package</phase><goals><goal>jar</goal></goals>
-								<configuration><additionalparam>-Xdoclint:none</additionalparam></configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-gpg-plugin</artifactId>
-						<executions><execution><phase>verify</phase><goals><goal>sign</goal></goals></execution></executions>
-					</plugin>
-				</plugins>
-			</build>
-			<distributionManagement>
-				<snapshotRepository>
-					<id>dswork-server</id>
-					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-				</snapshotRepository>
-				<repository>
-					<id>dswork-server</id>
-					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-				</repository>
-			</distributionManagement>
-		</profile>
-	</profiles>
-	
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<v.slf4j>1.7.25</v.slf4j>
-	</properties>
-	<dependencies>
-		<dependency><groupId>org.slf4j</groupId><artifactId>slf4j-api</artifactId><version>${v.slf4j}</version></dependency>
-	</dependencies>
-	
+
 </project>
