--- a/DsWorkJava/dswork-ognl/pom.xml
+++ b/DsWorkJava/dswork-ognl/pom.xml
@@ -5,26 +5,17 @@
 
 	<groupId>com.github.skeychen</groupId>
 	<artifactId>dswork-ognl</artifactId>
-	<version>8.8.0</version>
-
+	<version>${v.dswork}</version>
 	<name>dswork-ognl</name>
 	<description>dswork-ognl</description>
 	<url>https://github.com/skeychen/dswork</url>
 
-	<licenses>
-		<license>
-			<name>GNU Lesser General Public License v3.0</name>
-			<url>https://github.com/skeychen/dswork/blob/master/LICENSE</url>
-		</license>
-	</licenses>
-	
-	<developers><developer><id>skeychen</id><name>skey</name><email>249725997@qq.com</email></developer></developers>
-
-	<scm>
-		<connection>scm:git:git://github.com/skeychen/dswork</connection>
-		<developerConnection>scm:git:git://github.com/skeychen/dswork</developerConnection>
-		<url>https://github.com/skeychen/dswork</url>
-	</scm>
+	<parent>
+		<groupId>com.github.skeychen</groupId>
+		<artifactId>dswork-parent</artifactId>
+		<version>${v.dswork}</version>
+		<relativePath>../dswork-parent/pom.xml</relativePath>
+	</parent>
 
 	<build>
 		<sourceDirectory>./</sourceDirectory>
@@ -58,50 +49,4 @@
 		</plugins>
 	</build>
 
-	<profiles>
-		<profile>
-			<id>release</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-source-plugin</artifactId>
-						<executions><execution><phase>package</phase><goals><goal>jar-no-fork</goal></goals></execution></executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>2.9.1</version>
-						<executions>
-							<execution>
-								<phase>package</phase><goals><goal>jar</goal></goals>
-								<configuration><additionalparam>-Xdoclint:none</additionalparam></configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-gpg-plugin</artifactId>
-						<executions><execution><phase>verify</phase><goals><goal>sign</goal></goals></execution></executions>
-					</plugin>
-				</plugins>
-			</build>
-			<distributionManagement>
-				<snapshotRepository>
-					<id>dswork-server</id>
-					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-				</snapshotRepository>
-				<repository>
-					<id>dswork-server</id>
-					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-				</repository>
-			</distributionManagement>
-		</profile>
-	</profiles>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
-	<dependencies>
-	</dependencies>
 </project>
