--- a/DsWorkJava/dswork-web/pom.xml
+++ b/DsWorkJava/dswork-web/pom.xml
@@ -2,29 +2,25 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<groupId>com.github.skeychen</groupId>
 	<artifactId>dswork-web</artifactId>
-	<version>8.8.0</version>
-	
+	<version>${v.dswork}</version>
 	<name>dswork-web</name>
 	<description>dswork-web</description>
 	<url>https://github.com/skeychen/dswork</url>
-	
-	<licenses>
-		<license>
-			<name>GNU Lesser General Public License v3.0</name>
-			<url>https://github.com/skeychen/dswork/blob/master/LICENSE</url>
-		</license>
-	</licenses>
-	
-	<developers><developer><id>skeychen</id><name>skey</name><email>249725997@qq.com</email></developer></developers>
-	
-	<scm>
-		<connection>scm:git:git://github.com/skeychen/dswork</connection>
-		<developerConnection>scm:git:git://github.com/skeychen/dswork</developerConnection>
-		<url>https://github.com/skeychen/dswork</url>
-	</scm>
+
+	<parent>
+		<groupId>com.github.skeychen</groupId>
+		<artifactId>dswork-parent</artifactId>
+		<version>${v.dswork}</version>
+		<relativePath>../dswork-parent/pom.xml</relativePath>
+	</parent>
+
+	<dependencies>
+		<dependency><groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId><scope>provided</scope></dependency>
+		<dependency><groupId>javax.servlet.jsp</groupId><artifactId>jsp-api</artifactId><scope>provided</scope></dependency>
+	</dependencies>
 
 	<build>
 		<sourceDirectory>./</sourceDirectory>
@@ -46,59 +42,8 @@
 						<manifestFile>./MANIFEST.MF</manifestFile>
 					</archive>
 				</configuration>
-				
 			</plugin>
 		</plugins>
 	</build>
-	<profiles>
-		<profile>
-			<id>release</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-source-plugin</artifactId>
-						<executions><execution><phase>package</phase><goals><goal>jar-no-fork</goal></goals></execution></executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>2.9.1</version>
-						<executions>
-							<execution>
-								<phase>package</phase><goals><goal>jar</goal></goals>
-								<configuration><additionalparam>-Xdoclint:none</additionalparam></configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-gpg-plugin</artifactId>
-						<executions><execution><phase>verify</phase><goals><goal>sign</goal></goals></execution></executions>
-					</plugin>
-				</plugins>
-			</build>
-			<distributionManagement>
-				<snapshotRepository>
-					<id>dswork-server</id>
-					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-				</snapshotRepository>
-				<repository>
-					<id>dswork-server</id>
-					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-				</repository>
-			</distributionManagement>
-		</profile>
-	</profiles>
-	
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<v.servlet-api>3.0.1</v.servlet-api>
-		<v.jsp-api>2.2</v.jsp-api>
-	</properties>
-	<dependencies>
-		<dependency><groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId><version>${v.servlet-api}</version><scope>provided</scope></dependency>
-		<dependency><groupId>javax.servlet.jsp</groupId><artifactId>jsp-api</artifactId><version>${v.jsp-api}</version><scope>provided</scope></dependency>
-	</dependencies>
 
 </project>
