--- a/DsWorkJava/dswork-parent/pom.xml
+++ b/DsWorkJava/dswork-parent/pom.xml
@@ -80,7 +80,7 @@
 		<v.mybatis>3.4.6</v.mybatis>
 		<v.mybatis.spring>1.3.2</v.mybatis.spring>
 		<v.gson>2.8.5</v.gson>
-		<v.dswork>0.0.0-SNAPSHOT</v.dswork>
+		<v.dswork>8.8.1</v.dswork>
 	</properties>
 	
 	<dependencyManagement>
