--- a/DsWorkJava/dswork-ee/pom.xml
+++ b/DsWorkJava/dswork-ee/pom.xml
@@ -13,8 +13,8 @@
 	<parent>
 		<groupId>com.github.skeychen</groupId>
 		<artifactId>dswork-parent</artifactId>
-		<version>8.8.0</version>
-		<relativePath>../dswork-parent/pom.xml</relativePath>
+		<version>8.8.1</version>
+		<!--<relativePath>../dswork-parent/pom.xml</relativePath>-->
 	</parent>
 
 	<properties>
