--- a/DsWorkJava/dswork-java/pom.xml
+++ b/DsWorkJava/dswork-java/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.github.skeychen</groupId>
-	<artifactId>dswork-javaweb</artifactId>
+	<artifactId>dswork-java</artifactId>
 	<version>${v.dswork}</version>
 	<packaging>pom</packaging>
-	<name>dswork-javaweb</name>
-	<description>dswork-javaweb</description>
+	<name>dswork-java</name>
+	<description>dswork-java</description>
 	<url>https://github.com/skeychen/dswork</url>
 
 	<parent>
@@ -28,11 +28,7 @@
 		<dependency><groupId>commons-logging    </groupId><artifactId>commons-logging    </artifactId></dependency>
 		<dependency><groupId>commons-pool       </groupId><artifactId>commons-pool       </artifactId></dependency>
 	
-		<dependency><groupId>javax.servlet</groupId><artifactId>jstl</artifactId></dependency>
-		<dependency><groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId><scope>provided</scope></dependency>
-			
 		<dependency><groupId>org.apache.logging.log4j</groupId><artifactId>log4j-api       </artifactId></dependency>
-		<dependency><groupId>org.apache.logging.log4j</groupId><artifactId>log4j-web       </artifactId></dependency>
 		<dependency><groupId>org.apache.logging.log4j</groupId><artifactId>log4j-core      </artifactId></dependency>
 		<dependency><groupId>org.apache.logging.log4j</groupId><artifactId>log4j-slf4j-impl</artifactId></dependency>
 		
@@ -45,8 +41,6 @@
 		<dependency><groupId>org.springframework</groupId><artifactId>spring-expression</artifactId></dependency>
 		<dependency><groupId>org.springframework</groupId><artifactId>spring-jdbc      </artifactId></dependency>
 		<dependency><groupId>org.springframework</groupId><artifactId>spring-tx        </artifactId></dependency>
-		<dependency><groupId>org.springframework</groupId><artifactId>spring-web       </artifactId></dependency>
-		<dependency><groupId>org.springframework</groupId><artifactId>spring-webmvc    </artifactId></dependency>
 		
 		<dependency><groupId>org.mybatis</groupId><artifactId>mybatis       </artifactId></dependency>
 		<dependency><groupId>org.mybatis</groupId><artifactId>mybatis-spring</artifactId></dependency>
@@ -56,14 +50,12 @@
 		<dependency><groupId>com.github.skeychen</groupId><artifactId>dswork-jdbc  </artifactId></dependency>
 		<dependency><groupId>com.github.skeychen</groupId><artifactId>dswork-ognl  </artifactId></dependency>
 		<dependency><groupId>com.github.skeychen</groupId><artifactId>dswork-spring</artifactId></dependency>
-		<dependency><groupId>com.github.skeychen</groupId><artifactId>dswork-web   </artifactId></dependency>
 		<dependency><groupId>com.github.skeychen</groupId><artifactId>dswork-config</artifactId></dependency>
-		<dependency><groupId>com.github.skeychen</groupId><artifactId>dswork-mvc   </artifactId></dependency>
 	</dependencies>
 
 	<build>
 		<sourceDirectory>./</sourceDirectory>
-		<directory>E:/Workspaces/jar/pom/dswork-javaweb</directory>
+		<directory>E:/Workspaces/jar/pom/dswork-java</directory>
 	</build>
 
 </project>
