--- a/DsCommon/dswork-common/pom.xml
+++ b/DsCommon/dswork-common/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>com.github.skeychen</groupId>
 		<artifactId>dswork-parent</artifactId>
-		<version>0.0.0-SNAPSHOT</version>
+		<version>8.8.1</version>
 	</parent>
 	
 	<dependencies>
@@ -24,7 +24,7 @@
 
 	<build>
 		<sourceDirectory>./</sourceDirectory>
-		<directory>E:/Workspaces/jar/pom-snapshot/dswork-common</directory>
+		<directory>E:/Workspaces/jar/pom/dswork-common</directory>
 		<resources> 
 		     <resource>
 			     <directory>./</directory>
